--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,22 @@
-// Начните писать стили здесь
+// global
+@import "./global/common.less";
+@import "./global/fonts.less";
+@import "./global/mixins.less";
+@import "./global/variables.less";
+// index
+@import "./blocks/main-container.less";
+@import "./blocks/nutrition.less";
+@import "./blocks/main-header.less";
+@import "./blocks/main-nav.less";
+@import "./blocks/advantages.less";
+@import "./blocks/example.less";
+@import "./blocks/program.less";
+@import "./blocks/main-footer.less";
+@import "./blocks/visually-hidden.less";
+@import "./blocks/location.less";
+// catalog
+@import "./blocks/product-card.less";
+@import "./blocks/show-more.less";
+@import "./blocks/additionally.less";
+// form
+@import "./blocks/form.less";
