--- a/source/less/blocks/main-container.less
+++ b/source/less/blocks/main-container.less
@@ -2,3 +2,19 @@
   flex-grow: 1;
   background: @color-white;
 }
+
+.main__wrapper {
+  padding: 0 20px;
+}
+
+@media (min-width: @tablet-width) {
+  .main__wrapper {
+    padding: 0 30px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .main__wrapper {
+    padding: 0 110px;
+  }
+}
