--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -7,3 +7,6 @@
 @color-grey-3: #d9d9d9;
 @color-background: #ebebeb;
 @color-light-black: #111111;
+
+@tablet-width: 768px;
+@desktop-width: 1440px;
