--- a/source/less/global/common.less
+++ b/source/less/global/common.less
@@ -20,3 +20,15 @@ body {
   background-color: hsl(0, 0%, 85%);
   align-items: center;
 }
+
+@media (min-width: @tablet-width) {
+  body {
+    width: 768px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  body {
+    width: 1440px;
+  }
+}
