--- a/source/less/blocks/main-container.less
+++ b/source/less/blocks/main-container.less
@@ -11,6 +11,10 @@
   .main__wrapper {
     padding: 0 30px;
   }
+
+  .main__wrapper--mod {
+    padding: 0 70px;
+  }
 }
 
 @media (min-width: @desktop-width) {
