--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -9,7 +9,9 @@
 .main-header__logo {
   display: flex;
   align-items: center;
-  height: 65px;
+  min-height: 65px;
+  width: 191px;
+  justify-content: space-between;
 }
 
 @media (min-width: @tablet-width) {
@@ -17,6 +19,7 @@
     flex-direction: row;
     justify-content: space-between;
     padding: 0 30px;
+    align-items: center;
   }
 }
 
