--- a/source/less/blocks/location.less
+++ b/source/less/blocks/location.less
@@ -31,23 +31,18 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+    background: @color-grey;
   }
-}
 
-@media (min-width: @tablet-width) {
   .location__text {
     width: 171px;
   }
-}
 
-@media (min-width: @tablet-width) {
   .location__link {
     width: 160px;
     text-align: center;
   }
-}
 
-@media (min-width: @tablet-width) {
   iframe {
     width: 768px;
   }
@@ -57,9 +52,7 @@
   iframe {
     width: 1440px;
   }
-}
 
-@media (min-width: @desktop-width) {
   .location__inner {
     position: absolute;
     top: 176px;
