--- a/source/less/blocks/main-footer.less
+++ b/source/less/blocks/main-footer.less
@@ -34,32 +34,22 @@
   .main-footer {
     padding: 0 30px;
   }
-}
 
-@media (min-width: @tablet-width) {
   .main-footer__wrapper {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    width: 768px;
     justify-content: space-between;
+    width: 1220px;
   }
-}
 
-@media (min-width: @tablet-width) {
   .main-footer__copyright {
     width: 163px;
   }
 }
 
-@media (min-width: @tablet-width) {
+@media (min-width: @desktop-width) {
   .main-footer {
     padding: 0 110px;
-  }
-}
-
-@media (min-width: @tablet-width) {
-  .main-footer__wrapper {
-    width: 1220px;
   }
 }
