--- a/source/less/style.less
+++ b/source/less/style.less
@@ -5,7 +5,7 @@
 // index
 @import "./blocks/main-container.less";
 @import "./blocks/nutrition.less";
-@import "./blocks/main-header.less";
+@import "./blocks/header.less";
 @import "./blocks/main-nav.less";
 @import "./blocks/advantages.less";
 @import "./blocks/example.less";
