--- a/source/less/blocks/main-footer.less
+++ b/source/less/blocks/main-footer.less
@@ -4,12 +4,19 @@
   padding: 0 20px;
 }
 
+.main-footer__wrapper {
+  padding: 39px 0 29px;
+}
+
 .social__list {
+  position: relative;
   margin: 0;
   padding: 0;
   list-style-type: none;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
+  margin-bottom: 40px;
 }
 
 .copyright__text {
@@ -18,9 +25,30 @@
   color: @color-dark-grey;
 }
 
-.main__logo {
+.main__logo-footer {
   display: flex;
   justify-content: center;
+  margin-bottom: 48px;
+}
+
+.social__list::before {
+  position: absolute;
+  right: 0;
+  bottom: 52px;
+  left: 2px;
+  height: 1px;
+  background-color: @color-grey-3;
+  content: "";
+}
+
+.social__list::after {
+  position: absolute;
+  right: 0;
+  bottom: -15px;
+  left: 2px;
+  height: 1px;
+  background-color: @color-grey-3;
+  content: "";
 }
 
 .main-footer__copyright {
@@ -30,9 +58,28 @@
   justify-content: space-between;
 }
 
+.social__link {
+  display: flex;
+  height: 40px;
+  width: 41px;
+  margin-right: 6px;
+  align-items: center;
+  justify-content: center;
+}
+
 @media (min-width: @tablet-width) {
   .main-footer {
     padding: 0 30px;
+  }
+
+  .social__list::after,
+  .social__list::before {
+    display: none;
+  }
+
+  .main__logo-footer,
+  .social__list {
+    margin: 0;
   }
 
   .main-footer__wrapper {
